--- a/ListaDeHoteles.Android/ListaDeHoteles.Android.csproj
+++ b/ListaDeHoteles.Android/ListaDeHoteles.Android.csproj
@@ -90,7 +90,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\i7720562.png" />
+    <AndroidResource Include="Resources\drawable\i7720562.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ihello.png">
@@ -146,22 +148,34 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\rating1.png" />
+    <AndroidResource Include="Resources\drawable\rating1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\i5Est.png" />
+    <AndroidResource Include="Resources\drawable\i5Est.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\i3Es.png" />
+    <AndroidResource Include="Resources\drawable\i3Es.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\i2Es.png" />
+    <AndroidResource Include="Resources\drawable\i2Es.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\i1Es.png" />
+    <AndroidResource Include="Resources\drawable\i1Es.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\i4Es.png" />
+    <AndroidResource Include="Resources\drawable\i4Es.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\iHab.png">
@@ -174,7 +188,9 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ilocation.png" />
+    <AndroidResource Include="Resources\drawable\ilocation.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\iLugar.png">
